--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -31,84 +31,108 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">8</td><td class="numi">8</td><td class="numi">0</td><td class="numi">0</td><td class="numi">23.6 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">8</td><td class="numi">8</td><td class="numi">0</td><td class="numi">0</td><td class="numi">30.6 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
 <tr><th colspan="4">Default test &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="8">com.test.automation.uiAutomations.homepage.TC001_VerifyLoginWithInvalidCradentiols</td><td><a href="#m1"><b>VerifyLoginWithInvalidCradentiols</b>  </a></td><td class="numi">8</td><td>1519743819852</td><td class="numi">16744</td></tr><tr class="passedodd"><td><a href="#m2"><b>VerifyLoginWithInvalidCradentiols</b>  </a></td><td class="numi">8</td><td>1519743819852</td><td class="numi">16744</td></tr><tr class="passedodd"><td><a href="#m3"><b>VerifyLoginWithInvalidCradentiols</b>  </a></td><td class="numi">8</td><td>1519743819852</td><td class="numi">16744</td></tr><tr class="passedodd"><td><a href="#m4"><b>VerifyLoginWithInvalidCradentiols</b>  </a></td><td class="numi">8</td><td>1519743819852</td><td class="numi">16744</td></tr><tr class="passedodd"><td><a href="#m5"><b>VerifyLoginWithInvalidCradentiols</b>  </a></td><td class="numi">8</td><td>1519743819852</td><td class="numi">16744</td></tr><tr class="passedodd"><td><a href="#m6"><b>VerifyLoginWithInvalidCradentiols</b>  </a></td><td class="numi">8</td><td>1519743819852</td><td class="numi">16744</td></tr><tr class="passedodd"><td><a href="#m7"><b>VerifyLoginWithInvalidCradentiols</b>  </a></td><td class="numi">8</td><td>1519743819852</td><td class="numi">16744</td></tr><tr class="passedodd"><td><a href="#m8"><b>VerifyLoginWithInvalidCradentiols</b>  </a></td><td class="numi">8</td><td>1519743819852</td><td class="numi">16744</td></tr>
+<tr class="passedodd"><td rowspan="8">com.test.automation.uiAutomations.homepage.TC001_VerifyLoginWithInvalidCradentiols</td><td><a href="#m1"><b>VerifyLoginWithInvalidCradentiols</b>  </a></td><td class="numi">8</td><td>1519810774674</td><td class="numi">20736</td></tr><tr class="passedodd"><td><a href="#m2"><b>VerifyLoginWithInvalidCradentiols</b>  </a></td><td class="numi">8</td><td>1519810774674</td><td class="numi">20736</td></tr><tr class="passedodd"><td><a href="#m3"><b>VerifyLoginWithInvalidCradentiols</b>  </a></td><td class="numi">8</td><td>1519810774674</td><td class="numi">20736</td></tr><tr class="passedodd"><td><a href="#m4"><b>VerifyLoginWithInvalidCradentiols</b>  </a></td><td class="numi">8</td><td>1519810774674</td><td class="numi">20736</td></tr><tr class="passedodd"><td><a href="#m5"><b>VerifyLoginWithInvalidCradentiols</b>  </a></td><td class="numi">8</td><td>1519810774674</td><td class="numi">20736</td></tr><tr class="passedodd"><td><a href="#m6"><b>VerifyLoginWithInvalidCradentiols</b>  </a></td><td class="numi">8</td><td>1519810774674</td><td class="numi">20736</td></tr><tr class="passedodd"><td><a href="#m7"><b>VerifyLoginWithInvalidCradentiols</b>  </a></td><td class="numi">8</td><td>1519810774674</td><td class="numi">20736</td></tr><tr class="passedodd"><td><a href="#m8"><b>VerifyLoginWithInvalidCradentiols</b>  </a></td><td class="numi">8</td><td>1519810774674</td><td class="numi">20736</td></tr>
 </table>
 <h1>Default test</h1>
 <h2 id="m1">com.test.automation.uiAutomations.homepage.TC001_VerifyLoginWithInvalidCradentiols:VerifyLoginWithInvalidCradentiols</h2>
-<table cellspacing="0" cellpadding="0" class="result">
-<tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr>
-<tr class="param stripe"><td>harsha1@xyz.com</td>
-<td>harsha1</td>
-<td>Y</td>
-</tr>
-</table>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m2">com.test.automation.uiAutomations.homepage.TC001_VerifyLoginWithInvalidCradentiols:VerifyLoginWithInvalidCradentiols</h2>
-<table cellspacing="0" cellpadding="0" class="result">
-<tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr>
-<tr class="param stripe"><td>harsha8@xyz.com</td>
-<td>harsha8</td>
-<td>Y</td>
-</tr>
-</table>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m3">com.test.automation.uiAutomations.homepage.TC001_VerifyLoginWithInvalidCradentiols:VerifyLoginWithInvalidCradentiols</h2>
-<table cellspacing="0" cellpadding="0" class="result">
-<tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr>
-<tr class="param stripe"><td>harsha3@xyz.com</td>
-<td>harsha3</td>
-<td>Y</td>
-</tr>
-</table>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m4">com.test.automation.uiAutomations.homepage.TC001_VerifyLoginWithInvalidCradentiols:VerifyLoginWithInvalidCradentiols</h2>
-<table cellspacing="0" cellpadding="0" class="result">
-<tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr>
-<tr class="param stripe"><td>harsha7@xyz.com</td>
-<td>harsha7</td>
-<td>Y</td>
-</tr>
-</table>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m5">com.test.automation.uiAutomations.homepage.TC001_VerifyLoginWithInvalidCradentiols:VerifyLoginWithInvalidCradentiols</h2>
-<table cellspacing="0" cellpadding="0" class="result">
-<tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr>
-<tr class="param stripe"><td>harsha6@xyz.com</td>
-<td>harsha6</td>
-<td>Y</td>
-</tr>
-</table>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m6">com.test.automation.uiAutomations.homepage.TC001_VerifyLoginWithInvalidCradentiols:VerifyLoginWithInvalidCradentiols</h2>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr>
 <tr class="param stripe"><td>harsha4@xyz.com</td>
 <td>harsha4</td>
 <td>Y</td>
 </tr>
+<tr><td style="padding-left:3em" colspan="3">
+<a href='/Users/kavurichowdary/Desktop/Harsha1/uiAutomations/src/main/java/com/test/automation/uiAutomation/screenshot/VerifyLoginWithInvalidCradentiols_28_02_2018_09_39_45.png'> <img src='/Users/kavurichowdary/Desktop/Harsha1/uiAutomations/src/main/java/com/test/automation/uiAutomation/screenshot/VerifyLoginWithInvalidCradentiols_28_02_2018_09_39_45.png' height='100' width='100'/> </a><br/>
+</td></tr>
 </table>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m7">com.test.automation.uiAutomations.homepage.TC001_VerifyLoginWithInvalidCradentiols:VerifyLoginWithInvalidCradentiols</h2>
+<h2 id="m2">com.test.automation.uiAutomations.homepage.TC001_VerifyLoginWithInvalidCradentiols:VerifyLoginWithInvalidCradentiols</h2>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr>
-<tr class="param stripe"><td>harsha5@xyz.com</td>
-<td>harsha5</td>
+<tr class="param stripe"><td>harsha6@xyz.com</td>
+<td>harsha6</td>
 <td>Y</td>
 </tr>
+<tr><td style="padding-left:3em" colspan="3">
+<a href='/Users/kavurichowdary/Desktop/Harsha1/uiAutomations/src/main/java/com/test/automation/uiAutomation/screenshot/VerifyLoginWithInvalidCradentiols_28_02_2018_09_39_49.png'> <img src='/Users/kavurichowdary/Desktop/Harsha1/uiAutomations/src/main/java/com/test/automation/uiAutomation/screenshot/VerifyLoginWithInvalidCradentiols_28_02_2018_09_39_49.png' height='100' width='100'/> </a><br/>
+</td></tr>
 </table>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m8">com.test.automation.uiAutomations.homepage.TC001_VerifyLoginWithInvalidCradentiols:VerifyLoginWithInvalidCradentiols</h2>
+<h2 id="m3">com.test.automation.uiAutomations.homepage.TC001_VerifyLoginWithInvalidCradentiols:VerifyLoginWithInvalidCradentiols</h2>
+<table cellspacing="0" cellpadding="0" class="result">
+<tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr>
+<tr class="param stripe"><td>harsha8@xyz.com</td>
+<td>harsha8</td>
+<td>Y</td>
+</tr>
+<tr><td style="padding-left:3em" colspan="3">
+<a href='/Users/kavurichowdary/Desktop/Harsha1/uiAutomations/src/main/java/com/test/automation/uiAutomation/screenshot/VerifyLoginWithInvalidCradentiols_28_02_2018_09_39_55.png'> <img src='/Users/kavurichowdary/Desktop/Harsha1/uiAutomations/src/main/java/com/test/automation/uiAutomation/screenshot/VerifyLoginWithInvalidCradentiols_28_02_2018_09_39_55.png' height='100' width='100'/> </a><br/>
+</td></tr>
+</table>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m4">com.test.automation.uiAutomations.homepage.TC001_VerifyLoginWithInvalidCradentiols:VerifyLoginWithInvalidCradentiols</h2>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr>
 <tr class="param stripe"><td>harsha2@xyz.com</td>
 <td>harsha2</td>
 <td>Y</td>
 </tr>
+<tr><td style="padding-left:3em" colspan="3">
+<a href='/Users/kavurichowdary/Desktop/Harsha1/uiAutomations/src/main/java/com/test/automation/uiAutomation/screenshot/VerifyLoginWithInvalidCradentiols_28_02_2018_09_39_39.png'> <img src='/Users/kavurichowdary/Desktop/Harsha1/uiAutomations/src/main/java/com/test/automation/uiAutomation/screenshot/VerifyLoginWithInvalidCradentiols_28_02_2018_09_39_39.png' height='100' width='100'/> </a><br/>
+</td></tr>
+</table>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m5">com.test.automation.uiAutomations.homepage.TC001_VerifyLoginWithInvalidCradentiols:VerifyLoginWithInvalidCradentiols</h2>
+<table cellspacing="0" cellpadding="0" class="result">
+<tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr>
+<tr class="param stripe"><td>harsha3@xyz.com</td>
+<td>harsha3</td>
+<td>Y</td>
+</tr>
+<tr><td style="padding-left:3em" colspan="3">
+<a href='/Users/kavurichowdary/Desktop/Harsha1/uiAutomations/src/main/java/com/test/automation/uiAutomation/screenshot/VerifyLoginWithInvalidCradentiols_28_02_2018_09_39_42.png'> <img src='/Users/kavurichowdary/Desktop/Harsha1/uiAutomations/src/main/java/com/test/automation/uiAutomation/screenshot/VerifyLoginWithInvalidCradentiols_28_02_2018_09_39_42.png' height='100' width='100'/> </a><br/>
+</td></tr>
+</table>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m6">com.test.automation.uiAutomations.homepage.TC001_VerifyLoginWithInvalidCradentiols:VerifyLoginWithInvalidCradentiols</h2>
+<table cellspacing="0" cellpadding="0" class="result">
+<tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr>
+<tr class="param stripe"><td>harsha1@xyz.com</td>
+<td>harsha1</td>
+<td>Y</td>
+</tr>
+<tr><td style="padding-left:3em" colspan="3">
+<a href='/Users/kavurichowdary/Desktop/Harsha1/uiAutomations/src/main/java/com/test/automation/uiAutomation/screenshot/VerifyLoginWithInvalidCradentiols_28_02_2018_09_39_37.png'> <img src='/Users/kavurichowdary/Desktop/Harsha1/uiAutomations/src/main/java/com/test/automation/uiAutomation/screenshot/VerifyLoginWithInvalidCradentiols_28_02_2018_09_39_37.png' height='100' width='100'/> </a><br/>
+</td></tr>
+</table>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m7">com.test.automation.uiAutomations.homepage.TC001_VerifyLoginWithInvalidCradentiols:VerifyLoginWithInvalidCradentiols</h2>
+<table cellspacing="0" cellpadding="0" class="result">
+<tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr>
+<tr class="param stripe"><td>harsha7@xyz.com</td>
+<td>harsha7</td>
+<td>Y</td>
+</tr>
+<tr><td style="padding-left:3em" colspan="3">
+<a href='/Users/kavurichowdary/Desktop/Harsha1/uiAutomations/src/main/java/com/test/automation/uiAutomation/screenshot/VerifyLoginWithInvalidCradentiols_28_02_2018_09_39_52.png'> <img src='/Users/kavurichowdary/Desktop/Harsha1/uiAutomations/src/main/java/com/test/automation/uiAutomation/screenshot/VerifyLoginWithInvalidCradentiols_28_02_2018_09_39_52.png' height='100' width='100'/> </a><br/>
+</td></tr>
+</table>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m8">com.test.automation.uiAutomations.homepage.TC001_VerifyLoginWithInvalidCradentiols:VerifyLoginWithInvalidCradentiols</h2>
+<table cellspacing="0" cellpadding="0" class="result">
+<tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr>
+<tr class="param stripe"><td>harsha5@xyz.com</td>
+<td>harsha5</td>
+<td>Y</td>
+</tr>
+<tr><td style="padding-left:3em" colspan="3">
+<a href='/Users/kavurichowdary/Desktop/Harsha1/uiAutomations/src/main/java/com/test/automation/uiAutomation/screenshot/VerifyLoginWithInvalidCradentiols_28_02_2018_09_39_47.png'> <img src='/Users/kavurichowdary/Desktop/Harsha1/uiAutomations/src/main/java/com/test/automation/uiAutomation/screenshot/VerifyLoginWithInvalidCradentiols_28_02_2018_09_39_47.png' height='100' width='100'/> </a><br/>
+</td></tr>
 </table>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
